# gooroom-resource-access-control

./: .gitignore  Makefile.am  configure.ac.in  makemo
data/: Makefile.am  default.rules  grac-apply.sh  grac-block.sh  grac-device-daemon.service.in  grac-hci.sh  grac-status.sh  grac-udev-rules.map  kr.gooroom.GRACDEVD.conf  kr.gooroom.GRACDEVD.service.in
debian/: README  changelog  control  copyright  grac-device-daemon.install  grac-device-daemon.postinst  grac-device-daemon.postrm  grac-device-daemon.preinst  grac-device-daemon.prerm  grac-editor.install  grac-exec-browser.install  hook-clipboard.install  hook-clipboard.preinst  hook-screenshooter.install  hook-screenshooter.preinst  install  libgrac-browser-dev.install  libgrac-browser.install  libgrac-common-dev.install  libgrac-common.install  libgrac-device-dev.install  libgrac-device.install  postinst  preinst  rules
etc/dbus-1/system.d/: kr.gooroom.GRACDEVD.conf
etc/gooroom/grac.d/: Grac.conf  default.rules  grac-udev-rule-map
grac-device-daemon/: Makefile.am  grac_device_daemon.c  grac_device_daemon.h
grac-exec-browser/: Makefile.am  grac_exec_browser.c
hook-clipboard/: Makefile.am  hooker_clipboard.c
hook-screenshooter/: Makefile.am  hooker_screenshooter.c
lib/systemd/system/: grac-device-daemon.service
libgrac-browser/: Makefile.am  gac_control.c  gac_control.h  grac_browser.c  grac_browser.h  grac_url.c  grac_url.h  grac_url_list.c  grac_url_list.h  libgrac-browser.pc
libgrac-common/: Makefile.am  cutility.c  cutility.h  grac_config.c  grac_config.h  grac_log.c  grac_log.h  grac_map.c  grac_map.h  grm_log.c  grm_log.h  libgrac-common.pc  sys_acl.c  sys_acl.h  sys_comm.c  sys_comm.h  sys_cups.c  sys_cups.h  sys_etc.c  sys_etc.h  sys_file.c  sys_file.h  sys_ipset.c  sys_ipset.h  sys_ipt.c  sys_ipt.h  sys_iptables.c  sys_iptables.h  sys_user.c  sys_user.h  sys_user_list.c  sys_user_list.h
libgrac-device/: Makefile.am  grac_access.c  grac_access.h  grac_access_attr.c  grac_access_attr.h  grac_access_list.c  grac_access_list.h  grac_adjust_udev_rule.c  grac_adjust_udev_rule.h  grac_apply.c  grac_apply.h  grac_apply_capture.c  grac_apply_capture.h  grac_apply_dir.c  grac_apply_dir.h  grac_apply_network.c  grac_apply_network.h  grac_apply_printer.c  grac_apply_printer.h  grac_apply_usb.c  grac_apply_usb.h  grac_blockdev.c  grac_blockdev.h  grac_map.c  grac_map.h  grac_printer.c  grac_printer.h  grac_resource.c  grac_resource.h  grac_rule.c  grac_rule.h  grac_rule_hook.c  grac_rule_hook.h  grac_rule_network.c  grac_rule_network.h  grac_rule_printer_cups.c  grac_rule_printer_cups.h  grac_rule_udev.c  grac_rule_udev.h  libgrac-device.pc
nsr-ultract/: README.md
nsr-ultract/hook_clipboard/: README  asdf.txt  build.sh  hooker.c
nsr-ultract/hook_screenshooter/: README  hooker.c
nsr-ultract/hook_screenshooter/examples/: README  example.c  fopen_test  fopen_test.c
nsr-ultract/log_ui/: test.sh
nsr-ultract/udev-rule-setting/: README.md  test-udev.rules
usr/lib/gooroom-resource-access-control/: Grac.py  grac_api.py  grac_data_center.py  grac_define.py  grac_error.py  grac_inotify.py  grac_network.py  grac_printer.py  grac_synchronizer.py  grac_udev_dispatcher.py  grac_util.py  which-grac-rule.py
usr/lib/gooroom-resource-access-control/modules/: bluetooth.py  camera.py  cd_dvd.py  keyboard.py  microphone.py  mouse.py  printer.py  sound.py  usb_etc.py  usb_memory.py  usb_network.py  wireless.py
usr/lib/grac-editor/: ge_define.py  grac_editor.glade  grac_editor.py  grac_editor.ui  ko.po  theme.css
usr/share/applications/: grac-editor.desktop
usr/share/dbus-1/system-services/: kr.gooroom.GRACDEVD.service
usr/share/help/ko/grac-editors/: index.html  introduction.html  media.html  network.html  script.js  start.html  style.css
usr/share/polkit-1/actions/: kr.gooroom.grac-editor.policy
workspace/grac-device-daemon/: .cproject  .project  grac-device-daemon.doxyfile
workspace/grac-exec-browser/: .cproject  .project  grac-exec-browser.doxyfile
workspace/libgrac-browser/: .cproject  .project  libgrac-browser.doxyfile
workspace/libgrac-common/: .cproject  .project  libgrac-common.doxyfile
workspace/libgrac-device/: .cproject  .project  libgrac-device.doxyfile
workspace/test/: .cproject  test-grac.rules  test-udev.rules  test_adj.map  test_org.map
workspace/test-c/: .cproject  .project
workspace/test-c/src/: test-c.c
workspace/test/src/: test.c  test_avahi.c  test_etc.c  test_grac.c  test_inotify.c  test_iptc.c  test_json.c  test_lsblk.c  test_notify.c  test_pipe.c  test_recover.c  test_regx.c  test_socket.c  test_syslog.c  test_udev.c  test_udevmap.c  test_udevmap_cnv.c
workspace/testlib/: .cproject  .project  testlib.c
